# openGA

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: ccpp.yml
assist/: index.html  main.js  styles.css
ci-test-cases/: Makefile  compile_cl.bat  various-mo-dtlz2.cpp  various-so-rastrigin.cpp
cmake/: config.cmake.in
core/: genetic.hpp
examples/example_iga1/: example_iga1.cpp
examples/example_mo1/: example_mo1.cpp
examples/example_so1/: example_so1.cpp
examples/gGA blind/: blind.hpp  gGA_blind.cpp
examples/iga-colors/: gui.hpp  iga-colors.cpp
examples/mo-1/: example_mo1.cpp
examples/mo-dtlz2/: mo-dtlz2.cpp
examples/so-1/: example_so1.cpp
examples/so-bind/: example_bind.cpp
examples/so-init-solutions/: example_so-init-solutions.cpp
examples/so-multi-source/: header.hpp  multi-source-part1.cpp  multi-source-part2.cpp  multi-source-part3.cpp
examples/so-rastrigin/: so-rastrigin.cpp  use_member_function.cpp
include/openga/: genetic.hpp  openga.hpp  stop-watch.hpp
src/: genetic.hpp  openGA.hpp  openga.hpp
