cmake_minimum_required(VERSION 3.4.1)
project(openGA CXX C)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(Boost COMPONENTS system filesystem thread chrono REQUIRED)
include_directories(src)
add_executable(ex_so1 examples/so-1/example_so1.cpp)
target_link_libraries(ex_so1 Threads::Threads)