cmake_minimum_required(VERSION 3.4.1)
project(openGA CXX C)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
# Eigen
include_directories("/usr/include/eigen3" )
#TdLib
set(TdLib_DIR "/home/wang/CLionProjects/TdLibrary/install/lib/CMake/TdLib/")
find_package(TdLib REQUIRED)
include_directories(${TdLib_INCLUDE_DIRS})
MESSAGE(STATUS "TdLib_INCLUDE_DIRS = " ${TdLib_INCLUDE_DIRS})

#find_package(Boost COMPONENTS system filesystem thread chrono REQUIRED)
include_directories(src)
add_executable(ex_so1 examples/so-1/example_so1.cpp)
target_link_libraries(ex_so1 Threads::Threads)
add_executable(rastrigin examples/so-rastrigin/so-rastrigin.cpp)
target_link_libraries(rastrigin Threads::Threads ${TdLib_LIBRARIES})
add_executable(use_member_function examples/so-rastrigin/use_member_function.cpp)
target_link_libraries(use_member_function Threads::Threads ${TdLib_LIBRARIES})